# raysnake

./: .gitignore  CMakeLists.txt  README.md  build_android.sh  deploy_web.sh  index.html  raysnake.js  raysnake.wasm
android/: raysnake.keystore  settings.gradle
android/app/: build.gradle
android/app/debug/: output-metadata.json
android/app/release/: output-metadata.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/willian/raysnake/: NativeLoader.java
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
assets/: icon.xcf
src/: CMakeLists.txt  drawing.c  drawing.h  food.c  food.h  game.c  game.h  highscore.c  highscore.h  icon.h  input.c  input.h  library.js  main.c  minshell.html  snake.c  snake.h
